--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   width: 100%;
   height: 100%;
+  background-size: 100%;
   background-color:rgb(22, 40, 51);
   padding: 19% 0px;
   padding-top: 5%;
